--- a/Dockerfile.backend
+++ b/Dockerfile.backend
@@ -1,5 +1,5 @@
 # Multi-stage build for Spring Boot backend
-FROM maven:3.9.5-eclipse-temurin-17-alpine AS builder
+FROM maven:3.9.5-eclipse-temurin-17 AS builder
 
 # Set working directory
 WORKDIR /app
@@ -16,15 +16,14 @@ COPY backend/src ./src
 # Build the application
 RUN mvn clean package -DskipTests -B
 
-# Production stage
-FROM eclipse-temurin:17-jre-alpine
+# Production stage  
+FROM eclipse-temurin:17-jre
 
 # Install curl for health checks
-RUN apk add --no-cache curl
+RUN apt-get update && apt-get install -y curl && rm -rf /var/lib/apt/lists/*
 
 # Create app user for security
-RUN addgroup -g 1001 appgroup && \
-    adduser -u 1001 -G appgroup -s /bin/sh -D appuser
+RUN groupadd -r appgroup && useradd -r -g appgroup appuser
 
 # Set working directory
 WORKDIR /app
